src/QFont.h


// 
// This file has been automatically generated by RaQt_maker V0.0.6.
// To modify and regenerate it, see the source code available here: 
//         https://github.com/yguillemot/RaQt_maker
// 

#include <stdint.h>
#include <QtWidgets>
#include "externc.h"

EXTERNC void * QWQFontCtor_1();
EXTERNC void * SCWQFontCtor_1();
EXTERNC void QWQFontsetFamily(void * obj, char * arg1);
EXTERNC int32_t QWQFontpointSize(void * obj);
EXTERNC void QWQFontsetPointSize(void * obj, int32_t  arg1);
EXTERNC int8_t QWQFontbold(void * obj);
EXTERNC void QWQFontsetBold(void * obj, int8_t  arg1);
EXTERNC int8_t QWQFontitalic(void * obj);
EXTERNC void QWQFontsetItalic(void * obj, int8_t  b);
EXTERNC int32_t QWQFontstretch(void * obj);
EXTERNC void QWQFontsetStretch(void * obj, int32_t  arg1);
EXTERNC void QWvalidateCB_QFont(void *obj, int32_t objId, char *methodName);
EXTERNC void QWQFontDtor(void *);
EXTERNC void SCWQFontDtor(void *);